// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterType should render as AKS 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 text-xs h-6 px-1.5 border rounded-md bg-neutral-100 border-neutral-200 text-neutral-400"
      data-accent-color="neutral"
    >
      Self-managed
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as EKS 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 text-xs px-1.5 h-6 border rounded-md bg-neutral-100 border-neutral-200 text-neutral-400"
      data-accent-color="neutral"
    >
      EKS (Karpenter)
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as GCP 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 text-xs px-1.5 h-6 border rounded-md bg-neutral-100 border-neutral-200 text-neutral-400"
      data-accent-color="neutral"
    >
      GKE (Autopilot)
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as SCW 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 text-xs px-1.5 h-6 border rounded-md bg-neutral-100 border-neutral-200 text-neutral-400"
      data-accent-color="neutral"
    >
      Kapsule
    </span>
  </div>
</body>
`;
